--- a/_includes/news.html
+++ b/_includes/news.html
@@ -25,6 +25,6 @@
               </table>
             </div>
           {%- else -%} 
-            <p>No news so far...</p>
+            <p>Sem notícias por enquanto...</p>
           {%- endif %} 
           </div>
