--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -69,6 +69,11 @@ blockquote {
   text-align: center;
 }
 
+.evidence {
+    background-image: linear-gradient(to bottom, rgba(255, 228, 0, 0.5), rgba(255, 228, 0, 0.5));
+    color: var(--global-theme-color)
+}
+
 // Caption
 
 .caption {
