--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -74,6 +74,21 @@ blockquote {
     color: var(--global-theme-color)
 }
 
+.breaker {
+    height: 1px
+    margin: 6rem auto
+    width: 100%
+
+    &:before
+        content: "• • •"
+        width: 100%
+        text-align: center
+        display: block
+        color: $gama
+        letter-spacing: 4px
+        position: relative
+        top: -8px
+}
 // Caption
 
 .caption {
